Use dot-env for API keys

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+Make sure you rename .env-example to just `.env` and get actual API keys.
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
